@@ -2,6 +2,7 @@ opsi-script-beautifier (4.2.0.2-1) stable; urgency=medium
 
  * More Logs on Loglevel 7
  * Fix in determine indent in don't touch sections using countLeadingWhitespaces
+   and replace the original ident by the new one
 
 -- d.oertel <d.oertel@uib.de> Tue , 06 July 2021 15:00:00 + 0100
 
